Fixes ngsw config

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -61,6 +61,6 @@
       "type": "image/png"
     }
   ],
-  "theme_color": "rgb(59, 101, 106)",
+  "theme_color": "#41696a",
   "background_color": "#f9f9f9"
 }
