--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/service-worker": "^21.0.0",
-    "bible-picker": "^1.0.0",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
+    "bible-picker": ">=1.0.2",
     "idb": "^8.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
